--- a/assets/themes/Flatly/nvd3.override.css
+++ b/assets/themes/Flatly/nvd3.override.css
@@ -1,3 +1,6 @@
 text, svg .nvd3.nv-pie .nv-pie-title, .nvd3 .nv-discretebar .nv-groups text, .nvd3 .nv-multibarHorizontal .nv-groups text{
-   fill: #2c3e50
+   fill: #2c3e50;
+}
+.nvtooltip, .nvtooltip table{
+   background-color: #ffffff;
 }
