--- a/assets/themes/Slate/nvd3.override.css
+++ b/assets/themes/Slate/nvd3.override.css
@@ -1,3 +1,6 @@
 text, svg .nvd3.nv-pie .nv-pie-title, .nvd3 .nv-discretebar .nv-groups text, .nvd3 .nv-multibarHorizontal .nv-groups text{
-   fill: #c8c8c8
+   fill: #c8c8c8;
+}
+.nvtooltip, .nvtooltip table{
+   background-color: #272b30;
 }
