Update nvd3 to 1.8.5 + style updates

--- a/assets/themes/Sandstone/nvd3.override.css
+++ b/assets/themes/Sandstone/nvd3.override.css
@@ -2,6 +2,8 @@ text, svg .nvd3.nv-pie .nv-pie-title, .nvd3 .nv-discretebar .nv-groups text, .nv
    fill: #3e3f3a;
 }
 .nvd3 .nv-axis path{stroke: #3e3f3a}
+.nvd3.nv-pie path{stroke: #ffffff}
 .nvtooltip, .nvtooltip table{
+   color: #3e3f3a;
    background-color: #ffffff;
 }
