--- a/assets/themes/Cyborg/nvd3.override.css
+++ b/assets/themes/Cyborg/nvd3.override.css
@@ -2,6 +2,8 @@ text, svg .nvd3.nv-pie .nv-pie-title, .nvd3 .nv-discretebar .nv-groups text, .nv
    fill: #888888;
 }
 .nvd3 .nv-axis path{stroke: #888888}
+.nvd3.nv-pie path{stroke: #060606}
 .nvtooltip, .nvtooltip table{
+   color: #888888;
    background-color: #060606;
 }
