--- a/assets/themes/Darkly/nvd3.override.css
+++ b/assets/themes/Darkly/nvd3.override.css
@@ -2,6 +2,8 @@ text, svg .nvd3.nv-pie .nv-pie-title, .nvd3 .nv-discretebar .nv-groups text, .nv
    fill: #ffffff;
 }
 .nvd3 .nv-axis path{stroke: #ffffff}
+.nvd3.nv-pie path{stroke: #222222}
 .nvtooltip, .nvtooltip table{
+   color: #ffffff;
    background-color: #222222;
 }
