--- a/assets/themes/Simplex/nvd3.override.css
+++ b/assets/themes/Simplex/nvd3.override.css
@@ -2,6 +2,8 @@ text, svg .nvd3.nv-pie .nv-pie-title, .nvd3 .nv-discretebar .nv-groups text, .nv
    fill: #777777;
 }
 .nvd3 .nv-axis path{stroke: #777777}
+.nvd3.nv-pie path{stroke: #fcfcfc}
 .nvtooltip, .nvtooltip table{
+   color: #777777;
    background-color: #fcfcfc;
 }
