--- a/assets/themes/Slate/nvd3.override.css
+++ b/assets/themes/Slate/nvd3.override.css
@@ -2,6 +2,8 @@ text, svg .nvd3.nv-pie .nv-pie-title, .nvd3 .nv-discretebar .nv-groups text, .nv
    fill: #c8c8c8;
 }
 .nvd3 .nv-axis path{stroke: #c8c8c8}
+.nvd3.nv-pie path{stroke: #272b30}
 .nvtooltip, .nvtooltip table{
+   color: #c8c8c8;
    background-color: #272b30;
 }
