--- a/assets/themes/Spacelab/nvd3.override.css
+++ b/assets/themes/Spacelab/nvd3.override.css
@@ -2,6 +2,8 @@ text, svg .nvd3.nv-pie .nv-pie-title, .nvd3 .nv-discretebar .nv-groups text, .nv
    fill: #666666;
 }
 .nvd3 .nv-axis path{stroke: #666666}
+.nvd3.nv-pie path{stroke: #ffffff}
 .nvtooltip, .nvtooltip table{
+   color: #666666;
    background-color: #ffffff;
 }
