--- a/assets/themes/Superhero/nvd3.override.css
+++ b/assets/themes/Superhero/nvd3.override.css
@@ -2,6 +2,8 @@ text, svg .nvd3.nv-pie .nv-pie-title, .nvd3 .nv-discretebar .nv-groups text, .nv
    fill: #ebebeb;
 }
 .nvd3 .nv-axis path{stroke: #ebebeb}
+.nvd3.nv-pie path{stroke: #2b3e50}
 .nvtooltip, .nvtooltip table{
+   color: #ebebeb;
    background-color: #2b3e50;
 }
